[gd_scene load_steps=2 format=3 uid="uid://s32mga8hhl4v"]

[ext_resource type="Script" uid="uid://bfw2npq73q3oo" path="res://Script/UIManager.gd" id="1_jmley"]

[node name="UIManager" type="Control"]
layout_direction = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jmley")

[node name="RipeLabel" type="Label" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
offset_left = 5.0
offset_right = 1925.0
offset_bottom = 49.0
theme_override_colors/font_color = Color(0.186871, 1, 0.298332, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 35
text = "RipeLabel"

[node name="UnripeLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 5.0
offset_top = 50.0
offset_right = 1925.0
offset_bottom = 119.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "UnripeLabel"

[node name="NpcHarvestLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 85.0
offset_right = 1925.0
offset_bottom = 154.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "NpcHarvestLabel "

[node name="InteractionLabel" type="Label" parent="."]
layout_mode = 2
offset_top = 850.0
offset_right = 1920.0
offset_bottom = 919.0
theme_override_font_sizes/font_size = 50
text = "InteractionLabel"
horizontal_alignment = 1

[node name="NotificationLabel" type="Label" parent="."]
layout_mode = 2
offset_top = 850.0
offset_right = 1920.0
offset_bottom = 919.0
theme_override_font_sizes/font_size = 50
text = "NotificationLabel"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 50
text = "Timer"
horizontal_alignment = 1

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GAME PAUSED" type="Label" parent="PauseMenu"]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 23.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 710.0
offset_top = 290.0
offset_right = 1210.0
offset_bottom = 390.0
text = "Resume"

[node name="RestartButton" type="Button" parent="PauseMenu"]
layout_mode = 2
offset_left = 710.0
offset_top = 490.0
offset_right = 1210.0
offset_bottom = 590.0
text = "Restart"

[node name="QuitButton" type="Button" parent="PauseMenu"]
layout_mode = 2
offset_left = 710.0
offset_top = 690.0
offset_right = 1210.0
offset_bottom = 790.0
text = "Quit"

[node name="RoundEndPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FinalScoreLabel" type="Label" parent="RoundEndPanel"]
layout_mode = 2
offset_top = 300.0
offset_right = 1920.0
offset_bottom = 555.0
theme_override_font_sizes/font_size = 50
text = "FinalScoreLabel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DetailsLabel" type="Label" parent="RoundEndPanel"]
layout_mode = 0
offset_top = 55.0
offset_right = 1920.0
offset_bottom = 441.0
theme_override_font_sizes/font_size = 50
text = "DetailsLabel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="RoundEndPanel"]
layout_mode = 2
offset_left = 710.0
offset_top = 640.0
offset_right = 1210.0
offset_bottom = 740.0
text = "Restart"

[node name="QuitButton" type="Button" parent="RoundEndPanel"]
layout_mode = 0
offset_left = 710.0
offset_top = 860.0
offset_right = 1210.0
offset_bottom = 960.0
text = "Quit"
